# Prosel-EcompJR

./: .gitignore  README.md
interface/: index.html  package-lock.json  package.json
todo_list/: .env  pyproject.toml  todolist.db
todo_list/migrations/: env.py
todo_list/migrations/versions/: 2249a5fc9216_update_tasks_table.py  50d8d217f120_create_relationship_between_users_and_.py  7ef77850b6cc_create_users_table.py  bfc65e5d60b7_fix_model_imports.py  cdc618c37419_create_relationship_between_users_and_.py  cee7d66c1140_fix_model_imports_and_relationships.py  ebd011218cb2_create_users_table.py  ee27b1e1ec98_update_users_table.py
todo_list/todo_list/: app.py  security.py
todo_list/todo_list/configs/: database.py  settings.py
todo_list/todo_list/models/: models.py  task.py  user.py
todo_list/todo_list/routes/: auth.py  tasks.py  users.py
todo_list/todo_list/schemas/: message.py  task.py  token.py  user.py
