[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["MarcioDzn <79764696+MarcioDzn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
fastapi = {extras = ["standard"], version = "^0.114.0"}
pydantic = {extras = ["email"], version = "^2.9.0"}
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
